@@ -1,3 +1,7 @@
+2000-08-23  Tristan Tarrant  <nadir@users.sourceforge.net>
+
+	* tools/u7shpload.c: Can now save shapes
+
 2000-08-22  Tristan Tarrant  <nadir@users.sourceforge.net>
 
 	* configure.in: Look for gimptool
